--- a/index.html
+++ b/index.html
@@ -79,26 +79,37 @@
     <p>Welcome to the Attendee app. Your privacy is important to us. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our mobile application ("App").</p>
 
     <h2>Information We Collect</h2>
-    <p>We may collect and process the following personally identifiable information:</p>
+    <p>We collect and process the following personally identifiable information:</p>
     <ul>
       <li>Full name</li>
       <li>Email address</li>
       <li>User ID</li>
-      <li>Profile photo</li>
-      <li>Location data</li>
+      <li>Profile photo (with user consent)</li>
+      <li>Location data (for attendance tracking, with user consent)</li>
       <li>Device information (for debugging or analytics)</li>
-      <li>Gallery Access</li>
-      <li>Notification Access</li>
+      <li>Gallery Access (for uploading profile photo, with user consent)</li>
+      <li>Notification Access (for attendance alerts, with user consent)</li>
+      <li>Phone Call Permission (for direct calling feature, with user consent)</li>
     </ul>
 
     <h2>How We Use Your Information</h2>
     <p>The data we collect is used to:</p>
     <ul>
       <li>Identify and authenticate users</li>
-      <li>Track attendance based on user location</li>
-      <li>Display profile details</li>
+      <li>Track attendance based on user location (with user consent)</li>
+      <li>Display profile details (including profile photo)</li>
       <li>Improve app performance and user experience</li>
+      <li>Enable communication via phone call (with user consent)</li>
     </ul>
+
+    <h2>Permissions</h2>
+    <p>Our app requests the following permissions from your device:</p>
+    <ul>
+      <li><strong>Gallery Access:</strong> For uploading your profile photo</li>
+      <li><strong>Location Access:</strong> To track attendance based on your location</li>
+      <li><strong>Phone Call Permission:</strong> To allow admins to directly contact you</li>
+    </ul>
+    <p>All permissions are granted only with your explicit consent, and you can withdraw consent at any time through your device's settings.</p>
 
     <h2>Third-Party Services</h2>
     <p>We use the following third-party services that may collect information used to identify you:</p>
@@ -110,19 +121,19 @@
     </ul>
 
     <h2>Data Retention</h2>
-    <p>We retain personal data only for as long as necessary to fulfill the purposes we collected it for, including legal, accounting, or reporting requirements.</p>
+    <p>We retain personal data only for as long as necessary to fulfill the purposes we collected it for, including legal, accounting, or reporting requirements. After that period, data is securely deleted or anonymized.</p>
 
     <h2>Security</h2>
-    <p>We take appropriate security measures to protect your personal information from unauthorized access, disclosure, alteration, or destruction.</p>
+    <p>We take appropriate security measures to protect your personal information from unauthorized access, disclosure, alteration, or destruction. However, no data transmission over the internet or electronic storage system can be guaranteed to be 100% secure.</p>
 
     <h2>GDPR Compliance</h2>
-    <p>If you are located in the EU, you have the right to access, correct, delete, or restrict the use of your personal data. Contact us to exercise these rights.</p>
+    <p>If you are located in the EU, you have the right to access, correct, delete, or restrict the use of your personal data. To exercise these rights, please contact us using the information below.</p>
 
     <h2>Changes to This Privacy Policy</h2>
-    <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
+    <p>We may update our Privacy Policy from time to time. If we make changes, we will notify you by updating the effective date and posting the new Privacy Policy on this page. Please review this page periodically for any changes.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
+    <p>If you have any questions or concerns about this Privacy Policy, or if you would like to exercise your rights under the GDPR or other applicable privacy laws, please contact us at:</p>
     <p class="contact-email"><a href="mailto:mharif8484@gmail.com">support@attendeeapp.com</a></p>
   </div>
 
