--- a/index.html
+++ b/index.html
@@ -111,6 +111,21 @@
     </ul>
     <p>All permissions are granted only with your explicit consent, and you can withdraw consent at any time through your device's settings.</p>
 
+    <h2>Account Deletion</h2>
+    <p>You have the right to delete your account and all associated data at any time. To request the deletion of your **Attendee** account, follow the steps below:</p>
+    <ul>
+      <li><strong>Email Request:</strong> Send a request to <a href="mailto:support@attendeeapp.com">support@attendeeapp.com</a> with the subject line "Delete My Account".</li>
+      <li><strong>Account Information:</strong> Include your account information (such as the email or username used for registration) to help us locate your account.</li>
+      <li><strong>Confirmation:</strong> You will receive a confirmation email. Please reply to confirm your account deletion request.</li>
+    </ul>
+    <p><strong>Data Deletion:</strong> Once confirmed, we will delete the following data associated with your account:</p>
+    <ul>
+      <li>Personal details (name, email, and any other profile information)</li>
+      <li>Attendance records</li>
+      <li>Any other data linked to your account</li>
+    </ul>
+    <p>The deletion process may take up to **30 days** to complete. For any inquiries or questions about data deletion, please contact our support team at <a href="mailto:support@attendeeapp.com">support@attendeeapp.com</a>.</p>
+
     <h2>Third-Party Services</h2>
     <p>We use the following third-party services that may collect information used to identify you:</p>
     <ul>
@@ -134,7 +149,7 @@
 
     <h2>Contact Us</h2>
     <p>If you have any questions or concerns about this Privacy Policy, or if you would like to exercise your rights under the GDPR or other applicable privacy laws, please contact us at:</p>
-    <p class="contact-email"><a href="mailto:mharif8484@gmail.com">support@attendeeapp.com</a></p>
+    <p class="contact-email"><a href="mailto:support@attendeeapp.com">support@attendeeapp.com</a></p>
   </div>
 
   <div class="footer">
