--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <h2>Account Deletion</h2>
     <p>You have the right to delete your account and all associated data at any time. To request the deletion of your **Attendee** account, follow the steps below:</p>
     <ul>
-      <li><strong>Email Request:</strong> Send a request to <a href="mailto:support@attendeeapp.com">support@attendeeapp.com</a> with the subject line "Delete My Account".</li>
+      <li><strong>Email Request:</strong> Send a request to <a href="mailto:mharif8484@gmail.com">support@attendeeapp.com</a> with the subject line "Delete My Account".</li>
       <li><strong>Account Information:</strong> Include your account information (such as the email or username used for registration) to help us locate your account.</li>
       <li><strong>Confirmation:</strong> You will receive a confirmation email. Please reply to confirm your account deletion request.</li>
     </ul>
