--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <li>Attendance records</li>
       <li>Any other data linked to your account</li>
     </ul>
-    <p>The deletion process may take up to **30 days** to complete. For any inquiries or questions about data deletion, please contact our support team at <a href="mailto:support@attendeeapp.com">support@attendeeapp.com</a>.</p>
+    <p>The deletion process may take up to **30 days** to complete. For any inquiries or questions about data deletion, please contact our support team at <a href="mailto:mharif8484@gmail.com">support@attendeeapp.com</a>.</p>
 
     <h2>Third-Party Services</h2>
     <p>We use the following third-party services that may collect information used to identify you:</p>
@@ -149,7 +149,7 @@
 
     <h2>Contact Us</h2>
     <p>If you have any questions or concerns about this Privacy Policy, or if you would like to exercise your rights under the GDPR or other applicable privacy laws, please contact us at:</p>
-    <p class="contact-email"><a href="mailto:support@attendeeapp.com">support@attendeeapp.com</a></p>
+    <p class="contact-email"><a href="mailto:mharif8484@gmail.com">support@attendeeapp.com</a></p>
   </div>
 
   <div class="footer">
